--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -165,7 +165,7 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }*/
-.main-list-tools {
+/*.main-list-tools {
   padding: 120px 0;
 }
 
@@ -186,18 +186,18 @@
 .main-list-tytle {
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
   letter-spacing: 0.02em;
+  line-height: 1.2;
   color: #2e2f42;
   margin-bottom: 8px;
-}
-.main-list-text {
+}*/
+/*.main-list-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-}
-.main-link-icon {
+}*/
+/*.main-link-icon {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -206,12 +206,12 @@
   border-radius: 4px;
   border: 1px solid #8e8f99;
   margin-bottom: 8px;
-}
+}*/
 
 /* -----------*/
 
 /*   team   */
-.main-team {
+/*.main-team {
   background-color: #f4f4fd;
   flex-direction: row;
   padding: 120px 0;
@@ -241,7 +241,7 @@
   gap: 24px;
 }
 
-.team-list-tytle {
+/*.team-list-tytle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -289,18 +289,18 @@
 }
 .icon-icon {
   fill: #f4f4fd;
-}
+}*/
 
 /*------------*/
 
 /*   portfolio   */
 
-.main-portfolio {
+/*.main-portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
-}
+}*/
 
-.main-portfolio-tytle {
+/*.main-portfolio-tytle {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -309,9 +309,9 @@
   text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
-}
+}*/
 .portfolio-item {
-  background: #fff;
+  /*background: #fff;*/
   width: calc((100% - 24px * 2) / 3);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -326,13 +326,13 @@
   transform: translateY(0);
 }
 .portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
+  /* display: flex;
+  flex-wrap: wrap;*/
   row-gap: 48px;
   column-gap: 24px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+/*
 .portfolio-list-tytle {
   font-weight: 500;
   font-size: 20px;
@@ -346,8 +346,8 @@
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-}
-.portfolio-subtytle {
+}*/
+/*.portfolio-subtytle {
   text-align: left;
   padding: 32px 16px;
   border-bottom: 1px solid #e7e9fc;
@@ -372,14 +372,14 @@
   transform: translateY(100%);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+}*/
 
 /*-------------*/
 
 /*  footer   */
 
-.page-footer {
-  background-color: #2e2f42;
+/*.page-footer {
+ background-color: #2e2f42;
   padding: 100px 0;
 }
 
@@ -404,7 +404,7 @@
 
 .footer-logo {
   display: inline-block;
-  margin-bottom: 16px;
+  /margin-bottom: 16px;
 }
 .footer-icon-item {
   width: 40px;
@@ -420,32 +420,23 @@
   border-radius: 50%;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+}*/
 
-.footer-social-media {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #fff;
-  margin-bottom: 16px;
-  margin-left: 0;
-}
-
-.footer-social-icon {
+/*.footer-social-icon {
   display: flex;
   gap: 16px;
-}
+}*/
 
-.footer-icon-icon {
+/*.footer-icon-icon {
   fill: #f4f4fd;
 }
 
 .footer-icon-link:hover,
 .footer-icon-link:focus {
   background-color: #31d0aa;
-}
+}*/
 
-.email-tytle {
+/*.email-tytle {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -453,14 +444,13 @@
   color: #fff;
   margin-bottom: 16px;
 }
-.footer-subscribe {
-  margin-left: auto;
-}
+  
 .footer-email {
   border: 1px solid #fff;
   border-radius: 4px;
   width: 264px;
   height: 40px;
+  margin-bottom: 0;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   outline: transparent;
   background-color: transparent;
@@ -470,6 +460,7 @@
   padding-left: 16px;
   color: #ffffff;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .footer-email:focus {
@@ -519,7 +510,7 @@
   align-items: center;
   gap: 24px;
 }
-
+*/
 /*------------*/
 
 /*------modal------*/
