--- a/css/styles.css
+++ b/css/styles.css
@@ -301,6 +301,60 @@ button {
   color: #404bbf;
 }
 
+.mobile-contacts-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.mobile-contacts-link {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-contacts-link:hover,
+.mobile-contacts-link:focus {
+  color: #404bbf;
+}
+
+.mobile-icon-list {
+  display: flex;
+  gap: 40px;
+  justify-content: flex-start;
+  margin-top: 40px;
+  margin-bottom: 48px;
+  margin-left: 20;
+}
+.mobile-icon-item {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-icon-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-icon-link:hover,
+.mobile-icon-link:focus {
+  background-color: #404bbf;
+}
+
+.mobile-icon-icon {
+  fill: #f4f4fd;
+}
+
 @media screen and (min-width: 768px) {
   .mobile-menu {
     display: none;
@@ -437,3 +491,508 @@ button {
   }
 }
 /*-----------*/
+
+/*----main-----*/
+
+.main-list-tools {
+  padding: 96px 0px;
+}
+.main-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.main-list-item {
+  width: 100%;
+}
+.main-link-icon {
+  display: none;
+}
+.main-list-tytle {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+.main-list-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+@media screen and (min-width: 768px) {
+  .main-list-item {
+    width: calc((100% - 24px) / 2);
+  }
+
+  .main-list {
+    gap: 72px 24px;
+  }
+
+  .main-list-tytle {
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .main-list-tools {
+    padding: 120px 0;
+  }
+
+  .main-list {
+    display: flex;
+    gap: 24px;
+  }
+
+  .main-list-item {
+    width: calc((100% - 24px * 3) / 4);
+  }
+
+  .main-icon {
+    width: 64px;
+    height: 64px;
+  }
+
+  .main-list-tytle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+
+  .main-link-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+  }
+  /*----------------*/
+  /* -----team ---  */
+}
+.main-team {
+  background-color: #f4f4fd;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 96px 0;
+}
+.main-team-tytle {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+.main-team-list {
+  background-color: #fff;
+  border-radius: 0 0 4px 4px;
+  width: 100%;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 72px;
+}
+.team-img {
+  width: 100%;
+}
+
+.team-list-tytle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.team-list-item {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #434455;
+}
+.content-foto {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.icon-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  margin-top: 8px;
+}
+
+.icon-item {
+  width: 40px;
+  height: 40px;
+}
+.icon-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-link:hover,
+.icon-link:focus {
+  background-color: #404bbf;
+}
+.icon-icon {
+  fill: #f4f4fd;
+}
+@media screen and (min-width: 768px) {
+  .main-team-list {
+    width: calc((100% - 24px) / 2);
+  }
+  .team-list {
+    display: flex;
+    gap: 64px 24px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .main-team {
+    flex-direction: row;
+    padding: 120px 0;
+  }
+  .main-team-list {
+    width: calc((100% - 24px * 3) / 4);
+  }
+  .team-list {
+    display: flex;
+    gap: 24px;
+  }
+}
+
+/*--------------*/
+
+/*   portfolio   */
+
+.main-portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+.main-portfolio-tytle {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+.portfolio-item {
+  background: #fff;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  width: 100%;
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px;
+}
+
+.portfolio-list-tytle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+.portfolio-list-item {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.portfolio-subtytle {
+  text-align: left;
+  padding: 32px 16px;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+}
+.portfolio-item-wrap {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-item-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 40px 32px;
+  height: 100%;
+  background-color: #4d5ae5;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  transform: translateY(100%);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .portfolio-item {
+    width: calc((100% - 24px) / 2);
+  }
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 24px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (min-width: 1158px) {
+  .main-portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .portfolio-item {
+    width: calc((100% - 24px * 2) / 3);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .portfolio-item:hover,
+  .portfolio-item:focus {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+      0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  }
+
+  .portfolio-item:hover .portfolio-item-text {
+    transform: translateY(0);
+  }
+  .portfolio-list {
+    row-gap: 48px;
+    column-gap: 24px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+/*-------------*/
+
+/*  footer   */
+
+.page-footer {
+  background-color: #2e2f42;
+  padding: 96px 0;
+}
+
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.footer-logo-conteiner {
+  margin: 0 auto;
+  margin-bottom: 72px;
+}
+
+.footer-logo .logo-part {
+  color: #f4f4fd;
+}
+.footer-logo {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 16px;
+}
+.footer-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  max-width: 288px;
+}
+.footer-icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 72px;
+}
+.footer-social-media {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.footer-icon-item {
+  width: 40px;
+  height: 40px;
+  justify-content: space-between;
+}
+
+.footer-icon-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-social-icon {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-icon-icon {
+  fill: #f4f4fd;
+}
+
+.footer-icon-link:hover,
+.footer-icon-link:focus {
+  background-color: #31d0aa;
+}
+
+.email-tytle {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+  justify-content: center;
+}
+.footer-subscribe {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.footer-email {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 288px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  outline: transparent;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  color: #ffffff;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 16px;
+  opacity: 0.3;
+}
+
+.footer-email:focus {
+  border-color: #31d0aa;
+}
+
+.footer-email:focus::placeholder {
+  color: #31d0aa;
+}
+
+.footer-email::placeholder {
+  opacity: 0.6;
+  color: #fff;
+}
+.button-subscribe {
+  border-radius: 4px;
+  padding: 8px 24px;
+  width: 165px;
+  height: 40px;
+  min-width: 165px;
+  background-color: #4d5ae5;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0 auto;
+}
+
+.button-subscribe:focus {
+  background-color: #31d0aa;
+}
+
+.icon-subscribe {
+  fill: #fff;
+  margin-left: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-container {
+    gap: 72px 24px;
+    padding: 0 108px;
+  }
+  .footer-logo-conteiner,
+  .footer-icon,
+  .footer-subscribe,
+  .button-subscribe {
+    margin: 0;
+  }
+
+  .footer-logo,
+  .footer-social-media {
+    display: block;
+  }
+
+  .footer-text {
+    max-width: 264px;
+  }
+  .footer-form-send {
+    display: flex;
+    gap: 24px;
+  }
+  .footer-email {
+    width: 264px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .page-footer {
+    padding: 100px 0;
+  }
+  .footer-container {
+    align-items: baseline;
+    padding: 0 15px;
+    gap: 0;
+  }
+  .footer-logo-container {
+    margin-right: 120px;
+  }
+  .footer-subscribe {
+    margin-left: auto;
+  }
+  .footer-email {
+    opacity: 1;
+  }
+  .footer-email::placeholder {
+    opacity: 1;
+  }
+}
