--- a/css/styles.css
+++ b/css/styles.css
@@ -806,10 +806,12 @@ button {
 .footer-container {
   display: flex;
   flex-wrap: wrap;
+  gap: 72px;
 }
-.footer-logo-conteiner {
+.footer-logo-conteiner,
+.footer-icon,
+.footer-subscribe {
   margin: 0 auto;
-  margin-bottom: 72px;
 }
 
 .footer-logo .logo-part {
@@ -827,18 +829,16 @@ button {
   color: #f4f4fd;
   max-width: 288px;
 }
-.footer-icon {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  margin-bottom: 72px;
-}
+
 .footer-social-media {
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 16px;
 }
 
@@ -881,11 +881,7 @@ button {
   margin-bottom: 16px;
   justify-content: center;
 }
-.footer-subscribe {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
+
 .footer-email {
   border: 1px solid #fff;
   border-radius: 4px;
