--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,7 @@ button {
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    z-index: 2;
 }
 
 .mobile-menu.is-open {
@@ -286,6 +287,7 @@ button {
   gap: 40px;
 }
 
+
 .nav-link-mobile {
   display: block;
   font-family: "Roboto", sans-serif;
@@ -300,6 +302,14 @@ button {
 .nav-link-mobile:focus {
   color: #404bbf;
 }
+ .nav-link-mobile current {
+  color: #404bbf;
+}
+
+.mobile-contacts {
+  font-style: normal;
+}
+
 
 .mobile-contacts-list {
   display: flex;
@@ -327,8 +337,8 @@ button {
   gap: 40px;
   justify-content: flex-start;
   margin-top: 40px;
-  margin-bottom: 48px;
-  margin-left: 20;
+  
+  
 }
 .mobile-icon-item {
   width: 40px;
@@ -500,9 +510,9 @@ button {
 .main-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
-  padding-left: 16px;
-  padding-right: 16px;
+  gap: 72px;
+ /* padding-left: 16px;
+  padding-right: 16px;*/
 }
 
 .main-list-item {
@@ -521,6 +531,7 @@ button {
   margin-bottom: 8px;
 }
 .main-list-text {
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -581,9 +592,9 @@ button {
 }
 .main-team {
   background-color: #f4f4fd;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 96px 28px;
+  /*display: flex;
+  flex-wrap: wrap;*/
+  padding: 96px 0;
 }
 .main-team-tytle {
   font-weight: 700;
@@ -598,7 +609,7 @@ button {
 .main-team-list {
   background-color: #fff;
   border-radius: 0 0 4px 4px;
-  width: 100%;
+  width: 264px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
@@ -606,6 +617,7 @@ button {
   display: flex;
   flex-wrap: wrap;
   gap: 72px;
+  justify-content: center;
 }
 .team-img {
   width: 100%;
@@ -662,10 +674,10 @@ button {
 }
 @media screen and (min-width: 768px) {
   .main-team {
-    padding: 96px 108px;
+    padding: 96px 0;
   }
   .main-team-list {
-    width: calc((100% - 24px) / 2);
+    width: 264px;
   }
   .team-list {
     display: flex;
@@ -691,8 +703,8 @@ button {
 /*   portfolio   */
 
 .main-portfolio {
-  display: flex;
-  flex-wrap: wrap;
+ /* display: flex;
+  flex-wrap: wrap;*/
   padding-top: 96px;
   padding-bottom: 96px;
 }
@@ -795,6 +807,12 @@ button {
     row-gap: 48px;
     column-gap: 24px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .portfolio-list:hover,
+  .portfolio-list:focus {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   }
 }
 /*-------------*/
@@ -953,7 +971,7 @@ button {
   .footer-logo-conteiner,
   .footer-icon,
   .footer-subscribe,
-  .button-subscribe {
+  .button-subscribe, .footer-email {
     margin: 0;
   }
 
@@ -982,11 +1000,12 @@ button {
     padding: 0 15px;
     gap: 0;
   }
-  .footer-logo-container {
-    margin-right: 120px;
-  }
+  
   .footer-subscribe {
     margin-left: auto;
+  }
+  .footer-logo-container {
+    margin-right: 120px;
   }
   .footer-email {
     opacity: 1;
@@ -1209,7 +1228,7 @@ button {
   flex-shrink: 0;
 }
 
-.modal-signup:checked + .signup-text span {
+.modal-signup:checked + .signup-text .privacy-link {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
